--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,6 @@ networks:
     driver: bridge
     name: roboshop
     #external: true #I created network already using docker network create roboshop
-
 services:
   mongodb:
     image: harshavardhan247/mongodb:v1
@@ -37,3 +36,38 @@ services:
     depends_on:
     - mysql
     - cart
+  rabbitmq:
+    image: rabbitmq:3
+    container_name: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: roboshop
+      RABBITMQ_DEFAULT_PASS: roboshop123
+    volumes:
+    - rabbitmq:/var/lib/rabbitmq
+  payment:
+    image: harshavardhan247/payment:v1
+    container_name: payment
+    environment:
+      CART_HOST: cart
+      CART_POST: 8080
+      USER_HOST: user
+      USER_PORT: 8080
+      AMQP_HOST: rabbitmq
+      AMQP_USER: roboshop
+      AMQP_PASS: roboshop123
+    depends_on:
+    - rabbitmq
+    - cart
+    - user
+  frontend: 
+    image: harshavardhan247/frontend:v1
+    container_name: frontend
+    ports:
+    - "80:80"
+    depends_on:
+    - catalogue
+    - user
+    - cart
+    - shipping
+    - payment
+
