--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,18 @@ networks:
     driver: bridge
     name: roboshop
     #external: true #I created network already using docker network create roboshop
+# volumes:
+#   mongodb:
+#   redis:
+#   mysql:
+#   rabbitmq: # docker volume create rabbitmq
 services:
   mongodb:
     image: harshavardhan247/mongodb:v1
     container_name: mongodb
-  catalogue: 
+    # volumes:
+    # - mongodb:/data/db
+  catalogue:
     image: harshavardhan247/catalogue:v1
     container_name: catalogue
     depends_on:
@@ -15,7 +22,9 @@ services:
   redis:
     image: redis:7.0
     container_name: redis
-  user: 
+    # volumes:
+    # - redis:/data
+  user:
     image: harshavardhan247/user:v1
     container_name: user
     depends_on:
@@ -30,6 +39,8 @@ services:
   mysql:
     image: harshavardhan247/mysql:v1
     container_name: mysql
+    # volumes:
+    # - mysql:/var/lib/mysql
   shipping:
     image: harshavardhan247/shipping:v1
     container_name: shipping
@@ -42,12 +53,14 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: roboshop
       RABBITMQ_DEFAULT_PASS: roboshop123
+    # volumes:
+    # - rabbitmq:/var/lib/rabbitmq
   payment:
     image: harshavardhan247/payment:v1
     container_name: payment
     environment:
       CART_HOST: cart
-      CART_POST: 8080
+      CART_PORT: 8080
       USER_HOST: user
       USER_PORT: 8080
       AMQP_HOST: rabbitmq
@@ -57,7 +70,7 @@ services:
     - rabbitmq
     - cart
     - user
-  frontend: 
+  frontend:
     image: harshavardhan247/frontend:v1
     container_name: frontend
     ports:
@@ -68,4 +81,4 @@ services:
     - cart
     - shipping
     - payment
-
+      
